# neural-network

./: CMakeLists.txt  LICENSE  README.md  main.cpp  mingw64-toolchain.cmake  mnist.cpp  mnist.h  network.cpp  network.h  run.sh
